Container: small css fix that prevents word wrap in titles

--- a/src/ui/container.less
+++ b/src/ui/container.less
@@ -26,6 +26,8 @@
     height: 20px;
     overflow: hidden;
 
+    white-space: nowrap;
+
     .head {
       vertical-align: middle;
       /*font-size: @mediumFontSize;*/
